--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,4 @@
 adm/root.mk
-*.pyc
-build
-dist
-*.egg-info
-.project
-.pydevproject
-.settings
-doc2/_build
-doc/_build
-.coverage
-coverage
-*.plugin
-doc/utilities.md
-plugins/*/python3_virtualenv/
-**/__pycache__
-plugins/switch/local
-plugins/switch/python3_virtualenv_sources/src
-doc/layer_*.md
-doc/layer_*.rst
-doc/plugin.rst
-
+layers/layer9_default/cache/
+/__pycache__
+/_docs_build
