feat: enable and load management plugin

--- a/config/rabbitmq.conf
+++ b/config/rabbitmq.conf
@@ -29,3 +29,41 @@ listeners.tcp.default = {{MFBUS_RABBITMQ_AMQP_PORT}}
 ## You can define multiple listeners using listener names
 # listeners.tcp.other_port = 5673
 # listeners.tcp.other_ip   = 10.10.10.10:5672
+#
+#(...)
+#
+## ----------------------------------------------------------------------------
+## RabbitMQ Management Plugin
+##
+## Related doc guide: https://rabbitmq.com/management.html.
+## ----------------------------------------------------------------------------
+
+# =======================================
+# Management section
+# =======================================
+
+## Preload schema definitions from the following JSON file.
+## Related doc guide: https://rabbitmq.com/management.html#load-definitions.
+##
+# management.load_definitions = /path/to/exported/definitions.json
+
+## Log all requests to the management HTTP API to a file.
+##
+# management.http_log_dir = /path/to/access.log
+
+## HTTP listener and embedded Web server settings.
+# ## See https://rabbitmq.com/management.html for details.
+#
+#management.tcp.port = {{MFBUS_RABBITMQ_MANAGEMENT_PORT}}
+# management.tcp.ip   = 0.0.0.0
+#
+# management.tcp.shutdown_timeout   = 7000
+# management.tcp.max_keepalive      = 120
+# management.tcp.idle_timeout       = 120
+# management.tcp.inactivity_timeout = 120
+# management.tcp.request_timeout    = 120
+# management.tcp.compress           = true
+
+## HTTPS listener settings.
+## See https://rabbitmq.com/management.html and https://rabbitmq.com/ssl.html for details.
+##
