Revert "build: add fake shell for test"
This reverts commit 4bb85d804f30614e88cc59aa0195e0403b8326a9.

--- a/adm/Makefile
+++ b/adm/Makefile
@@ -1,4 +1,4 @@
-BINS=_check_nginx_conf _check_circus_conf rabbitmq_wrapper before_start_rabbitmq check_rabbitmq_status.py before_signal get_epmd_pid fake.sh
+BINS=_check_nginx_conf _check_circus_conf rabbitmq_wrapper before_start_rabbitmq check_rabbitmq_status.py before_signal get_epmd_pid
 
 include root.mk
 include $(MFEXT_HOME)/share/subdir_root.mk
