--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,8 +93,11 @@ jobs:
             mkdir -p ${REMOTE}
           scp: |
             '${LOCAL}/metwork-*.rpm' => ${REMOTE}
+            '${DOCKER_WORKFLOW_SCRIPTS_DIR}/createrepo.sh' => ${REMOTE}
           last_ssh: |
-            /home/metworkpub/bin/createrepo.sh ${REMOTE}
+            chmod +x createrepo.sh
+            ./createrepo.sh ${REMOTE}
+            rm -f createrepo.sh
       - name: publish doc
         if: ${{ github.event_name != 'pull_request' && steps.SetVariables.outputs.branch != 'null' }}
         uses: thebaptiste/ssh-scp-ssh-pipelines@metwork
