--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,10 +93,23 @@ jobs:
             mkdir -p ${REMOTE}
           scp: |
             '${LOCAL}/metwork-*.rpm' => ${REMOTE}
-            '${DOCKER_WORKFLOW_SCRIPTS_DIR}/createrepo.sh' => ${REMOTE}
+      - name: createrepo
+        if: ${{ github.event_name != 'pull_request' && steps.SetVariables.outputs.branch != 'null' }}
+        uses: thebaptiste/ssh-scp-ssh-pipelines@metwork
+        env:
+          REMOTE: ${{ steps.SetVariables.outputs.rpm_dir }}
+          LOCAL: ${{ github.workspace }}/.github/workflows
+        with:
+          host: ${{ secrets.METWORKPUB_HOST }}
+          user: ${{ secrets.METWORKPUB_USERNAME }}
+          pass: ${{ secrets.METWORKPUB_PASSWORD }}
+          port: 22
+          scp: |
+            '${LOCAL}/createrepo.sh' => ${REMOTE}
           last_ssh: |
+            cd ${REMOTE}
             chmod +x createrepo.sh
-            ./createrepo.sh ${REMOTE}
+            ./createrepo.sh .
             rm -f createrepo.sh
       - name: publish doc
         if: ${{ github.event_name != 'pull_request' && steps.SetVariables.outputs.branch != 'null' }}
