--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci_build
+name: CI
 
 on:
   push:
@@ -9,23 +9,29 @@ on:
       - release_*
       - ci*
       - pci* 
-      - github*
     tags:
       - v*
   pull_request:
   repository_dispatch:
-    types: metwork-trigger
+    types:
+      - metwork-trigger*
 
 env:
     OS_VERSION: centos6
+
+
     DOCKER_RUN_OPTIONS: "-v ${{ github.workspace }}:/src -e GITHUB_REF -e GITHUB_RUN_NUMBER -e GITHUB_SHA -e GITHUB_REPOSITORY -e OS_VERSION"
+
     WORKFLOW_SCRIPTS_DIR: .github/workflows
     DOCKER_WORKFLOW_SCRIPTS_DIR: /src/.github/workflows
     PAYLOAD_BRANCH: ${{ github.event.client_payload.branch}}
 
 jobs:
   ci_build:
+
+
     runs-on: ubuntu-latest
+
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -58,19 +64,9 @@ jobs:
           DEP_BRANCH=${{ steps.SetVariables.outputs.dep_branch }}
           BUILDIMAGE=${{ steps.SetVariables.outputs.buildimage }}
           docker run ${DOCKER_RUN_OPTIONS} -e TARGET_DIR=${TARGET_DIR} -e BRANCH=${BRANCH} -e DEP_BRANCH=${DEP_BRANCH} -e TAG=${TAG} --rm ${BUILDIMAGE} /bin/bash -c "${DOCKER_WORKFLOW_SCRIPTS_DIR}/build.sh"
-      - name: check ssh connect as ssh-scp-ssh-pipelines does not do it
-        if: ${{ github.event_name != 'pull_request' && steps.SetVariables.outputs.branch != 'null' }}
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.METWORKPUB_HOST }}
-          username: ${{ secrets.METWORKPUB_USERNAME }}
-          password: ${{ secrets.METWORKPUB_PASSWORD }}
-          port: 22
-          script: |
-            pwd
       - name: publish buildlogs
         if: ${{ github.event_name != 'pull_request' && steps.SetVariables.outputs.branch != 'null' }}
-        uses: cross-the-world/ssh-scp-ssh-pipelines@latest
+        uses: thebaptiste/ssh-scp-ssh-pipelines@metwork
         env:
           REMOTE: ${{ steps.SetVariables.outputs.buildlog_dir }}
           LOCAL: ${{ github.workspace }}/buildlogs
@@ -84,14 +80,15 @@ jobs:
           scp: |
             '${LOCAL}/*' => ${REMOTE}
       - name: integration tests
-        if: ${{ steps.SetVariables.outputs.branch != 'null' }}
+        if: ${{ steps.SetVariables.outputs.branch != 'null' && steps.BuildStep.outputs.bypass == 'false' }}
         run: |
           TESTIMAGE=${{ steps.SetVariables.outputs.testimage }}
           DEP_BRANCH=${{ steps.SetVariables.outputs.dep_branch }}
-          docker run ${DOCKER_RUN_OPTIONS} -e DEP_BRANCH=${DEP_BRANCH} --rm ${TESTIMAGE} /bin/bash -c "${DOCKER_WORKFLOW_SCRIPTS_DIR}/integration_tests.sh"
+          BRANCH=${{ steps.SetVariables.outputs.branch }}
+          docker run ${DOCKER_RUN_OPTIONS} -e DEP_BRANCH=${DEP_BRANCH} -e BRANCH=${BRANCH} --rm ${TESTIMAGE} /bin/bash -c "${DOCKER_WORKFLOW_SCRIPTS_DIR}/integration_tests.sh"
       - name: publish rpms
-        if: ${{ github.event_name != 'pull_request' && steps.SetVariables.outputs.branch != 'null' }}
-        uses: cross-the-world/ssh-scp-ssh-pipelines@latest
+        if: ${{ github.event_name != 'pull_request' && steps.BuildStep.outputs.bypass == 'false' && steps.SetVariables.outputs.branch != 'null' }}
+        uses: thebaptiste/ssh-scp-ssh-pipelines@metwork
         env:
           REMOTE: ${{ steps.SetVariables.outputs.rpm_dir }}
           LOCAL: ${{ github.workspace }}/rpms
@@ -104,11 +101,39 @@ jobs:
             mkdir -p ${REMOTE}
           scp: |
             '${LOCAL}/metwork-*.rpm' => ${REMOTE}
+      - name: createrepo
+        if: ${{ github.event_name != 'pull_request' && steps.BuildStep.outputs.bypass == 'false' && steps.SetVariables.outputs.branch != 'null' }}
+        uses: thebaptiste/ssh-scp-ssh-pipelines@metwork
+        env:
+          REMOTE: ${{ steps.SetVariables.outputs.rpm_dir }}
+          LOCAL: ${{ github.workspace }}/.github/workflows
+        with:
+          host: ${{ secrets.METWORKPUB_HOST }}
+          user: ${{ secrets.METWORKPUB_USERNAME }}
+          pass: ${{ secrets.METWORKPUB_PASSWORD }}
+          port: 22
+          scp: |
+            '${LOCAL}/createrepo.sh' => ${REMOTE}
           last_ssh: |
-            createrepo --update ${REMOTE} 
+            cd ${REMOTE}
+            chmod +x createrepo.sh
+            ./createrepo.sh .
+      - name: mageia_repo
+        if: ${{ github.event_name != 'pull_request' && steps.BuildStep.outputs.bypass == 'false' && steps.SetVariables.outputs.branch != 'null' }}
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.METWORKPUB_HOST }}
+          username: ${{ secrets.METWORKPUB_USERNAME }}
+          password: ${{ secrets.METWORKPUB_PASSWORD }}
+          port: 22
+          script: |
+
+            docker run -v /pub:/pub --rm mageia:6 /bin/bash -c "genhdlist2 --allow-empty-media ${{ steps.SetVariables.outputs.rpm_dir }}"
+
+
       - name: publish doc
-        if: ${{ github.event_name != 'pull_request' && steps.SetVariables.outputs.branch != 'null' }}
-        uses: cross-the-world/ssh-scp-ssh-pipelines@latest
+        if: ${{ github.event_name != 'pull_request' && steps.BuildStep.outputs.bypass == 'false' && steps.SetVariables.outputs.branch != 'null' }}
+        uses: thebaptiste/ssh-scp-ssh-pipelines@metwork
         env:
           REMOTE: ${{ steps.SetVariables.outputs.doc_dir }}
           LOCAL: ${{ github.workspace }}/html_doc
@@ -122,3 +147,10 @@ jobs:
             mkdir -p ${REMOTE}
           scp: |
             '${LOCAL}/*' => ${REMOTE}
+
+
+
+
+
+
+
