--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,12 @@ on:
 env:
 
 
-    DOCKER_RUN_OPTIONS: "-v ${{ github.workspace }}:/src -e GITHUB_REF -e GITHUB_RUN_NUMBER -e GITHUB_SHA -e GITHUB_REPOSITORY -e GITHUB_OUTPUT"
+    DOCKER_RUN_OPTIONS: "-v ${{ github.workspace }}:/src -v ${RUNNER_TEMP}:/temp_runner -e GITHUB_REF -e GITHUB_RUN_NUMBER -e GITHUB_SHA -e GITHUB_REPOSITORY -e GITHUB_OUTPUT"
 
     WORKFLOW_SCRIPTS_DIR: .github/workflows
     DOCKER_WORKFLOW_SCRIPTS_DIR: /src/.github/workflows
     PAYLOAD_BRANCH: ${{ github.event.client_payload.branch}}
     PAYLOAD_OS: ${{ github.event.client_payload.os}}
-    RUNNER_TEMPO: ${{ runner.temp }}
 
 jobs:
   ci_build:
