--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
       - name: debug env
         run: |
           env
+          cat ${GITHUB_OUTPUT}
       - name: bootstrap
         if: ${{ steps.SetVariables.outputs.branch != 'null' }}
         run: |
@@ -68,7 +69,7 @@ jobs:
           BUILDIMAGE=${{ steps.SetVariables.outputs.buildimage }}
           docker pull ${BUILDIMAGE}
           docker run ${DOCKER_RUN_OPTIONS} -e TARGET_DIR=${TARGET_DIR} -e BRANCH=${BRANCH} -e DEP_BRANCH=${DEP_BRANCH} -e TAG=${TAG} -e OS_VERSION=${OS_VERSION} --rm ${BUILDIMAGE} /bin/bash -c "${DOCKER_WORKFLOW_SCRIPTS_DIR}/build.sh"
-          cat  ${{ github.workspace }}/github_output > ${GITHUB_OUTPUT}
+          cat  ${{ github.workspace }}/github_output >> ${GITHUB_OUTPUT}
           cat ${GITHUB_OUTPUT}
 
       - name: publish buildlogs
